1. Collection API Улучшения[#127823]