@@ -14,8 +14,9 @@ public class ConvertList2ArrayTest {
     @Test
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+//        int[][] result = list.toArray(
+//                Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3);
+        int[][] result = list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3);
         int[][] expect = {
                 {1, 2, 3},
                 {4, 5, 6},
@@ -26,10 +27,11 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void when6() {
-        ConvertList2Array a = new ConvertList2Array();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+       ConvertList2Array a = new ConvertList2Array();
+//        List<int[]> list = new ArrayList<>();
+//        list.add(new int[]{1, 2});
+//        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
         List<Integer> res = a.convert(list);
         int result = res.get(2);
         int expect = 3;
